# hildon-desktop

./: .gitignore  .gitmodules  ChangeLog  ChangeLog.old  Makefile.am  TODO  autogen.sh  configure.ac  hildon-desktop.rescue  tidy-marshal.c  tidy-marshal.h
data/desktop/: Makefile.am  applications.desktop  applications.directory  applications.w50-desktop  bookmark.w50-desktop  browser.w50-desktop  calendar.w50-desktop  camera-ui.w50-desktop  filemanager.w50-desktop  hildon-application-manager.w50-desktop  hildon-control-panel.w50-desktop  hildon.desktop  image-viewer.w50-desktop  maemoblocks.w50-desktop  mahjong_startup.w50-desktop  mediaplayer.w50-desktop  modest.w50-desktop  nokia-maps.w50-desktop  osso-addressbook.w50-desktop  osso-backup.w50-desktop  osso_calculator.w50-desktop  osso_lmarbles.w50-desktop  osso_notes.w50-desktop  osso_pdfviewer.w50-desktop  osso_rss_feed_reader.w50-desktop  osso_sketch.w50-desktop  rhapsody.w50-desktop  rtcom-call-ui.w50-desktop  rtcom-messaging-ui.w50-desktop  worldclock.w50-desktop
data/icons/: Makefile.am  index.theme
data/icons/48x48/: Makefile.am
desktop/tidy/: Makefile.am  tidy-adjustment.h  tidy-blur-group.c  tidy-finger-scroll.c  tidy-highlight.c  tidy-highlight.h  tidy-mem-texture.c  tidy-mem-texture.h  tidy-style.c  tidy-sub-texture.h  tidy-util.h
desktop/util/: Makefile.am  hd-desktop-config.c  hd-desktop-config.h  hd-gtk-utils.c  hd-theme-config.c  hd-theme-config.h  hd-transition.c  hd-transition.h  hd-util.c  hd-util.h
src/: Makefile.am  export.map  hd-applet-test.c  hd-atoms.c  hd-atoms.h  hd-comp-mgr.c  hd-comp-mgr.h  hd-comp-window.c  hd-comp-window.h  hd-dbus.c  hd-dbus.h  hd-desktop.c  hd-home-applet.c  hd-home-applet.h  hd-home-view.c  hd-home-view.h  hd-home.c  hd-home.h  hd-mb-wm-props.h  hd-stage.c  hd-stage.h  hd-switcher-group.c  hd-switcher-group.h  hd-switcher.c  hd-switcher.h  hd-util.c  hd-util.h  hd-window-actor.c  hd-window-actor.h  hd-window-group.c  hd-window-group.h  hd-wm.c  hd-wm.h  hildon-desktop-active.schemas  hildon-desktop-keys.schemas  hildon-desktop-post-backup.sh  hildon-desktop-restore.sh  hildon-desktop-rfs.sh  hildon-desktop-views.schemas  hildon-desktop.conf  (+5 more)
src/a11y/: Makefile.am  hda-factory.h  hda-module.c  hildon-desktop-a11y.c  hildon-desktop-a11y.h
src/a11y/home/: Makefile.am  hda-home-init.c  hda-home-init.h  hda-home.c  hda-home.h
src/a11y/launcher/: Makefile.am  hda-launcher-grid.c  hda-launcher-grid.h  hda-launcher-page.c  hda-launcher-page.h  hda-launcher-tile.c  hda-launcher-tile.h  hda-launcher.c  (+1 more)
src/desktop/: Makefile.am  hd-clutter-cache.h  hd-home-dbus.xml  hd-home-view-container.h  hd-home.h  hd-scrollable-group.h  hd-task-navigator.c  hd-tn-layout.h
src/home/: Makefile.am  hd-add-applet-dialog.c  hd-add-applet-dialog.h  hd-add-task-dialog.c  hd-add-task-dialog.h  hd-applet-manager.c  hd-applet-manager.h  hd-background-dialog.c  hd-background-dialog.h  hd-clutter-cache.c  hd-clutter-cache.h  hd-edit-menu.c  hd-edit-menu.h  hd-gtk-utils.h  hd-home-dbus.xml  hd-home-glue.h  hd-home-view-container.c  hd-home-view-container.h  hd-home-view-layout.c  hd-home-view.c  hd-home-view.h  hd-home.c  hd-home.h  hd-layout-dialog.c  hd-layout-dialog.h  hd-notification.c  hd-notification.h  hd-pvr-texture.c  hd-pvr-texture.h  hd-render-manager.c  hd-render-manager.h  hd-scrollable-group.c  hd-scrollable-group.h  hd-switcher-group.c  hd-switcher-group.h  hd-switcher.c  hd-switcher.h  hd-task-manager.c  hd-task-manager.h  hd-task-navigator.c  (+6 more)
src/launcher/: Makefile.am  hd-app-launcher.c  hd-app-launcher.h  hd-app-mgr-dbus.xml  hd-app-mgr-glue.h  hd-app-mgr.c  hd-app-mgr.h  hd-dummy-launcher.c  hd-dummy-launcher.h  hd-launcher-app.c  hd-launcher-app.h  hd-launcher-config.c  hd-launcher-config.h  hd-launcher-editor.c  hd-launcher-editor.h  hd-launcher-grid.c  hd-launcher-grid.h  hd-launcher-item.c  hd-launcher-item.h  hd-launcher-page.c  hd-launcher-page.h  hd-launcher-tile.c  hd-launcher-tile.h  hd-launcher-tree.c  hd-launcher-tree.h  hd-launcher-utils.c  hd-launcher-utils.h  hd-launcher.c  hd-launcher.h  hd-running-app.c  hd-running-app.h  hd-task-launcher-private.h  hd-task-launcher.c  hd-task-launcher.h  main.c  test-launcher.c
src/libhildondesktop/: hd-home-view-layout.c  hd-home-view-layout.h  hd-home-view.c  hd-home-view.h  hd-home.c  hd-render-manager.h  hd-switcher.c  hd-tn-layout.c  pvr-texture.c
src/mb/: Makefile.am  hd-animation-actor.c  hd-animation-actor.h  hd-app-menu.c  hd-app-menu.h  hd-app.c  hd-app.h  hd-applet-layout-manager.c  hd-applet-layout-manager.h  hd-atoms.c  hd-atoms.h  hd-comp-mgr.c  hd-comp-mgr.h  hd-decor-button.c  hd-decor-button.h  hd-decor.c  hd-decor.h  hd-desktop.c  hd-desktop.h  hd-dialog.c  hd-dialog.h  hd-home-applet.c  hd-home-applet.h  hd-keyboard.c  hd-keyboard.h  hd-note.c  hd-note.h  hd-remote-texture.c  hd-remote-texture.h  hd-status-area.c  hd-status-menu.c  hd-status-menu.h  hd-theme.c  hd-theme.h  hd-wm.c  hd-wm.h
src/tidy/: Makefile.am  tidy-actor.c  tidy-actor.h  tidy-adjustment.c  tidy-adjustment.h  tidy-animation.c  tidy-animation.h  tidy-blur-group.c  tidy-blur-group.h  tidy-cached-group.c  tidy-cached-group.h  tidy-finger-scroll.c  tidy-finger-scroll.h  tidy-frame.c  tidy-frame.h  tidy-highlight.c  tidy-highlight.h  tidy-interval.c  tidy-interval.h  tidy-mem-texture.c  tidy-mem-texture.h  tidy-scroll-bar.c  tidy-scroll-view.c  tidy-style.c  tidy-style.h  tidy-sub-texture.c  tidy-sub-texture.h  tidy-types.h  tidy-util.c  tidy-util.h
src/util/: Makefile.am  hd-dbus.c  hd-dbus.h  hd-gtk-style.c  hd-gtk-style.h  hd-gtk-utils.c  hd-theme-config.c  hd-transition.c  hd-transition.h  hd-util.c  hd-util.h  hd-volume-profile.c  hd-volume-profile.h
tests/: Makefile.am  portrait-common.c  pvr-viewer.c  test-abook-iface.sh  test-app-launch.c  test-applet.c  test-do-not-disturb.c  test-hung-process.c  test-large-note.c  test-large-window-stack.c  test-launcher.c  test-live-bg-transp.c  test-live-bg.c  test-no-gtk.c  test-non-compositing.c  test-portrait-dlg.c  test-portrait-win.c  test-portrait.c  test-signals.c  test-speed.c
(+87 files in other folders)
