desktopdir = $(datadir)/applications/hildon
desktop_DATA = \
	applications.w50-desktop \
	bookmark.w50-desktop \
	browser.w50-desktop \
	calendar.w50-desktop \
	camera-ui.w50-desktop \
	filemanager.w50-desktop \
	hildon-application-manager.w50-desktop \
	hildon-control-panel.w50-desktop \
	image-viewer.w50-desktop \
	maemoblocks.w50-desktop \
	mahjong_startup.w50-desktop \
	mediaplayer.w50-desktop \
	modest.w50-desktop \
	nokia-maps.w50-desktop \
	osso-addressbook.w50-desktop \
	osso-backup.w50-desktop \
	osso_calculator.w50-desktop \
	osso_lmarbles.w50-desktop \
	osso_notes.w50-desktop \
	osso_pdfviewer.w50-desktop \
	osso_rss_feed_reader.w50-desktop \
	osso_sketch.w50-desktop \
	rhapsody.w50-desktop \
	rtcom-call-ui.w50-desktop \
	rtcom-messaging-ui.w50-desktop \
	worldclock.w50-desktop
	
EXTRA_DIST = $(desktop_DATA)

