icondir = $(datadir)/icons/hicolor/48x48/apps
icon_DATA = \
	qgn_tswitcher_application.png \
	qgn_tswitcher_close.png \
	qgn_tswitcher_right.png \
	qgn_tswitcher_back.png \
	qgn_tswitcher_left.png \
	applet-resize-button.png \
	bg-image-launcher.png \
	hibernation-icon.png \
	applet-settings-button.png \
	bg-image-switcher.png \
	back-button.png \
	qgn_home_close.png

EXTRA_DIST = $(icon_DATA)

