icondir = $(datadir)/icons/hicolor/48x48/apps
icon_DATA = \
	qgn_tswitcher_application.png \
	qgn_tswitcher_close.png \
	qgn_tswitcher_right.png \
	qgn_tswitcher_back.png \
	qgn_tswitcher_left.png \
	qgn_general_add.png \
	qgn_home_edit_mode.png \
	qgn_home_resizer.png \
	qgn_home_settings.png \
	qgn_home_close.png \
	applet-resize-button.png \
	hibernation-icon.png \
	applet-settings-button.png \
	back-button.png

EXTRA_DIST = $(icon_DATA)

